AA-67: Fixed spacing between statements on dynamic question page

--- a/src/styles/valgomat.style.css
+++ b/src/styles/valgomat.style.css
@@ -89,7 +89,7 @@
     width: 90vw;
     border: 1px solid #ccc;
     padding: 30px 0;
-    margin: 90px 0 0 5%;
+    margin: 60px 0 0 5%;
 }
 
 .dynamicButtonDivTwo{
@@ -98,7 +98,7 @@
     width: 90vw;
     border: 1px solid #ccc;
     padding: 30px 0;
-    margin: 90px 0 0 5%;
+    margin: 20px 0 0 5%;
 }
 
 .dynamicButton{
